# cpp-lib

./: .gitignore  CMakeLists.txt
cmake/: ModelecConfig.cmake.in
components/CLParser/: CMakeLists.txt
components/CLParser/include/Modelec/: CLParser.h
components/CLParser/include/Modelec/CLParser/: Type.h
components/CLParser/src/: CLParser.cpp
components/TCPClient/: CMakeLists.txt
components/TCPClient/include/Modelec/: TCPClient.h
components/TCPClient/src/: TCPClient.cpp
components/Utils/: CMakeLists.txt
components/Utils/include/Modelec/: Utils.h
components/Utils/src/: Utils.cpp
example/: CMakeLists.txt  client.example.cpp  main.cpp  parser.example.cpp
